--- a/基礎.md
+++ b/基礎.md
@@ -1,6 +1,12 @@
 ## PHPの文法の書き方
-**1. 出力**
+**1. 出力ののしかた**
 ```php:tittle
 <? php echo "Good morning"."/n"; ?>
 ```
- - 「<? php」で始まり「?>」で終わるというルールがある
+ - 「<？php」で始まり「？＞」で終わるというルールがある(「？＞」は省略することが可能)
+ - ； セミコロンを処理の終わりに書くのは、phpの決まりになる
+ - 「 echo 」 が文字列を出力する記述
+ - "...."ダブルクオテーションの中に表示させたい文字列をどを記述
+ - 「／n」は改行という意味
+ - . ドットはドット前後の文字列を連結させるため
+ - このコードは「Good morning」と改行（/n）を連結している
