--- a/基礎.md
+++ b/基礎.md
@@ -11,3 +11,22 @@
  - . ドットはドット前後の文字列を連結させるため
  - このコードは「Good morning」と改行（\n）を連結している
  - ターミナルでは、「 php ファイル名.php 」 出力があっているかを確認 
+
+**2. 変数**
+- 変数 = 箱<br> 変数があることで、文字や数字などのデータを変数に入れておくことができる
+- 変数にデータを入れることを「代入」・取り出すことを「参照」という
+- 変数を作る = 変数を宣言する　
+```php:tittle
+<?php
+$num;
+```
+- phpでは変数名を「＄」ドルマークではじめる　
+
+
+
+**2. 配列の作り方**
+ 1. array()
+ - 変数 = array(要素数)；
+ 　<br> 
+  ```php:tittle
+  
