--- a/基礎.md
+++ b/基礎.md
@@ -21,6 +21,8 @@
 $num;
 ```
 - phpでは変数名を「＄」ドルマークではじめる　
+- 変数名のルール<br> **abc(アルファベット)** <br> **123(数字)** <br> **_(アンダースコア)**
+- 大文字 ⇄ 小文字　（区別される）
 
 
 
