--- a/基礎.md
+++ b/基礎.md
@@ -23,8 +23,11 @@ $num;
 - phpでは変数名を「＄」ドルマークではじめる　
 - 変数名のルール<br> **abc(アルファベット)** <br> **123(数字)** <br> **_(アンダースコア)**
 - 大文字 ⇄ 小文字　（区別される）
+- 予約語も変数名として使うことができるがおすすめしない・分かりにくいコードになるため
+（pythonなどは予約語を変数名として使うことができない）<br> **予約語 = プログラミング言語で、すでに役割が決まっている単語のことをいう**
 
-
+**3. データ型**
+- データ型
 
 **2. 配列の作り方**
  1. array()
