--- a/基礎.md
+++ b/基礎.md
@@ -27,7 +27,18 @@ $num;
 （pythonなどは予約語を変数名として使うことができない）<br> **予約語 = プログラミング言語で、すでに役割が決まっている単語のことをいう**
 
 **3. データ型**
-- データ型
+- データ型とは、変数に入れるデータの種類のこと
+　1. 数値型
+  2. 文字列型
+  3. ブール型
+
+
+
+
+
+
+
+
 
 **2. 配列の作り方**
  1. array()
