--- a/基礎.md
+++ b/基礎.md
@@ -27,7 +27,7 @@ $num;
 （pythonなどは予約語を変数名として使うことができない）<br> **予約語 = プログラミング言語で、すでに役割が決まっている単語のことをいう**
 
 **3. データ型**
-- データ型とは、変数に入れるデータの種類のこと<br> phpでは、変数にデータを入れるとき、データ型を指定する必要がない<br> phpが自動的にデータ型を判断してくれるから←**動的型付け言語**
+- データ型とは、変数に入れるデータの種類のこと<br> phpでは、変数にデータを入れるとき、データ型を指定する必要がない<br> phpが自動的にデータ型を判断してくれるから←**動的型付け言語という**<br>
 　1. 数値型<br>
   2. 文字列型<br>
   3. ブール型
