--- a/基礎.md
+++ b/基礎.md
@@ -35,7 +35,13 @@ $num;
      - phpのデータ型は、「gettype()」でを使用して確認することが可能
      - 「var_dump」を使用するとデータ型と変数の中身を表示してくれる(var_dumpを使用するときは、echoを頭に付けない)
  2. 文字列型<br>
+     - 文字列型 = string型という
  3. ブール型
+     - ブール型 = Boolean型
+     - 一般的にTrueまたはfalseの2つのうち１つを持つ型のことをさす ⇄ phpでは、変わっていて
+     
+
+ 
 
 
 
