--- a/基礎.md
+++ b/基礎.md
@@ -38,7 +38,12 @@ $num;
      - 文字列型 = string型という
  3. ブール型
      - ブール型 = Boolean型
-     - 一般的にTrueまたはfalseの2つのうち１つを持つ型のことをさす ⇄ phpでは、変わっていて
+     - 一般的にTrueまたはfalseの2つのうち１つを持つ型のことをさす ⇄ phpでは、変わっている
+     - Trueのときには「1」が代入され、Falseのときは何も代入されない<br> True = 「1」 ・ False = 「2」
+     - 
+     
+     
+     
      
 
  
