--- a/基礎.md
+++ b/基礎.md
@@ -39,7 +39,7 @@ $num;
  3. ブール型
      - ブール型 = Boolean型
      - 一般的にTrueまたはfalseの2つのうち１つを持つ型のことをさす ⇄ phpでは、変わっている
-     - Trueのときには「1」が代入され、Falseのときは何も代入されない<br> True = 「1」 ・ False = 「2」
+     - Trueのときには「1」が出力され、Falseのときは何も出力されない<br> True = 「1」 ・ False = 「2」
      - 
      
      
